<resources>
    <string name="app_name">PapaKarlo</string>
    <string name="part_ruble">&#160;₽</string>
    <string name="title_main">Главная</string>
    <string name="title_menu">Меню</string>
    <string name="title_cafe_list">Рестораны</string>
    <string name="title_orders">Ваши заказы</string>
    <string name="title_profile">Профиль</string>
    <string name="title_order_details">Детали заказа</string>
    <string name="title_login">Регистрация</string>
    <string name="title_confirm">Подтверждение номера</string>
    <string name="title_settings">Настройки</string>
    <string name="title_cart">Корзина</string>
    <string name="title_creation_order">Оформление заказа</string>
    <string name="title_creation_address">Добавление адреса</string>
    <string name="title_product">Продукт</string>
    <string name="action_product_want">Хочу!</string>
    <string name="hint_product_title">Title</string>
    <string name="hint_product_cost">Cost</string>
    <string name="hint_product_gram">Gram</string>
    <string name="hint_product_description">Description</string>
    <string name="title_menu_all">Все</string>
    <string name="title_menu_combo">Комбо</string>
    <string name="title_menu_pizza">Пицца</string>
    <string name="title_menu_barbecue">На мангале</string>
    <string name="title_menu_burger">Бургеры</string>
    <string name="title_menu_drink">Напитки</string>
    <string name="title_menu_potato">Картошка</string>
    <string name="title_menu_spice">Соусы</string>
    <string name="title_menu_bakery">Выпечка</string>
    <string name="title_menu_oven">В печи</string>
    <string name="action_menu_want">Хочу!</string>
    <string name="msg_menu_empty_tab">В этом разделе скоро появятся новые блюда</string>
    <string name="title_top_bar_title">Заголовок</string>
    <string name="action_consumer_cart_checkout">Оформить заказ</string>
    <string name="action_consumer_cart_menu">Меню</string>
    <string name="msg_consumer_cart_empty">Ваша корзина пуста, добавьте товар из \"Меню\"</string>
    <string name="msg_consumer_cart_free_delivery">Доставка бесплатно</string>
    <string name="part_consumer_cart_free_delivery_from">Бесплатная доставка от&#160;</string>
    <string name="part_consumer_cart_difference_before_free_delivery">\nДо бесплатной доставки не хватает&#160;</string>
    <string name="title_creation_order_address">Адрес</string>
    <string name="title_creation_order_extra_extra_comment">Дополнительная информация</string>
    <string name="title_creation_order_extra_bonuses">Бонусы</string>
    <string name="title_creation_order_contact">Контактная информация</string>
    <string name="title_creation_order_phone">Телефон*</string>
    <string name="title_creation_order_email">Email</string>
    <string name="action_creation_order_delivery">Доставка</string>
    <string name="action_creation_order_pickup">Самовывоз</string>
    <string name="title_creation_order_deferred_time">Выберите время доставки</string>
    <string name="action_creation_order_deferred">Отложенный заказ</string>
    <string name="action_creation_order_order">Оформить заказ</string>
    <string name="action_creation_order_address">Добавить адрес</string>
    <string name="msg_creation_order_add_address">Добавьте адрес</string>
    <string name="msg_creation_order_selected_address">Выбранный адрес:</string>
    <string name="msg_creation_order_free">Бесплатная доставка от 500 ₽</string>
    <string name="hint_creation_order_extra_comment">Комментарий</string>
    <string name="hint_creation_order_extra_bonuses">Списать бонусы</string>
    <string name="hint_creation_order_delivery_city">Доставка по городу Кимры</string>
    <string name="hint_creation_order_deferred">Отложенный заказ</string>
    <string name="error_creation_order_comment">Введите корректный комментарий</string>
    <string name="error_creation_order_phone">Введите корректный номер телефона</string>
    <string name="error_creation_order_connect">Нет подключения к интернету</string>
    <string name="error_creation_order_address">Выберите адрес</string>
    <string name="action_creation_order_delivery_time">Время доставки&#160;</string>
    <string name="action_creation_order_pickup_time">Заберу заказ в&#160;</string>
    <string name="action_creation_order_checkout">Оформить заказ на&#160;</string>
    <string name="msg_creation_order_order_code">Код заказа&#160;</string>
    <string name="error_creation_order_deferred">Выберите время минимум на 30 мин. больше текущего</string>
    <string name="part_creation_order_delivery_cost">Стоимость доставки:&#160;</string>
    <string name="part_creation_order_free_delivery_from">\nБесплатная доставка от&#160;</string>
    <string name="title_creation_address_address">Адрес</string>
    <string name="hint_creation_address_street">Улица*</string>
    <string name="hint_creation_address_house">Дом*</string>
    <string name="hint_creation_address_flat">Квартира</string>
    <string name="hint_creation_address_entrance">Подъезд</string>
    <string name="hint_creation_address_intercom">Домофон</string>
    <string name="hint_creation_address_floor">Этаж</string>
    <string name="msg_creation_address_created_address">Адрес добавлен</string>
    <string name="action_creation_address_address">Добавить адрес</string>
    <string name="error_creation_address_name">Некорректное название</string>
    <string name="error_creation_address_number">Некорректный номер</string>
    <string name="error_creation_address_code">Некорректный код</string>
    <string name="title_bottom_navigation_menu_cafe_list">Рестораны</string>
    <string name="title_bottom_navigation_menu_menu">Меню</string>
    <string name="title_bottom_navigation_profile">Профиль</string>
    <string name="title_bottom_navigation_discount">Акции</string>
    <string name="msg_contacts_work_time">Время работы:&#160;</string>
    <string name="msg_contacts_work_time_divider">&#160;-&#160;</string>
    <string name="action_cafe_list_copy_card_number">Номер карты</string>
    <string name="action_cafe_list_copy_phone_number">Номер телефона</string>
    <string name="msg_cafe_list_copy_card_number_copied">Номер карты скопирован</string>
    <string name="msg_cafe_list_copy_phone_number_copied">Номер телефона скопирован</string>
    <string name="title_cafe_list_payment">Оплата</string>
    <string name="pay_data_card_number">4279 3800 2260 1191</string>
    <string name="pay_data_phone_number">+79038015552</string>
    <string name="title_bottom_sheet_addresses_your_address">Ваши адреса</string>
    <string name="title_bottom_sheet_addresses_cafe_address">Адреса ресторанов</string>
    <string name="msg_order_details_order">Заказ&#160;</string>
    <string name="msg_order_details_order_time">Дата и время заказа</string>
    <string name="msg_order_details_pickup_method">Способ получения</string>
    <string name="msg_order_details_delivery">Доставка</string>
    <string name="msg_order_details_pickup">Самовывоз</string>
    <string name="msg_order_details_deferred_time">Ко времени</string>
    <string name="msg_order_details_address">Адрес</string>
    <string name="msg_order_details_comment">Комментарий</string>
    <string name="msg_order_details_order_status">Статус</string>
    <string name="msg_order_details_order_list">Список заказанных блюд</string>
    <string name="msg_order_details_order_cost">Сумма заказа</string>
    <string name="msg_order_details_delivery_cost">Доставка</string>
    <string name="msg_order_details_delivery_free">Бесплатно</string>
    <string name="action_order_details_cancel">Отменить</string>
    <string name="action_order_details_save">Сохранить</string>
    <string name="title_order_details_alert">Внимание!</string>
    <string name="msg_order_details_alert">Отменить заказ?</string>
    <string name="action_order_details_yes">Да</string>
    <string name="action_order_details_no">Нет</string>
    <string name="title_profile_contact">Контактная информация</string>
    <string name="title_profile_value_email">Email</string>
    <string name="title_profile_email">Электронная почта</string>
    <string name="title_profile_your_address">Ваши адерса</string>
    <string name="title_profile_create_address">Добавить адрес</string>
    <string name="title_profile_orders">История заказов</string>
    <string name="title_profile_bonuses">Бонусы</string>
    <string name="title_profile_no_profile">В профиле будут отбражаться: история ваших заказов, бонусны, сохраненные адреса и контактная информация</string>
    <string name="action_profile_orders">Список заказов</string>
    <string name="action_profile_settings">Настройки</string>
    <string name="action_profile_address_list">Список адресов</string>
    <string name="action_profile_login">Войти</string>
    <string name="title_login_registration">Регистрация</string>
    <string name="title_login_info">Введите номер вашего телефона и почту 😊</string>
    <string name="title_login_phone">Телефон*</string>
    <string name="title_login_email">Email</string>
    <string name="action_login_continue">Продолжить</string>
    <string name="error_login_phone">Введите корректный номер телефона</string>
    <string name="title_confirm_code">Код подтверждения</string>
    <string name="title_confirm_information">Введите код подтверждения ✉</string>
    <string name="title_confirm_prone_information">Код был отправлен на номер</string>
    <string name="msg_confirm_prone_resend">Получить повторно код можно через:</string>
    <string name="action_confirm_resend">ПОЛУЧИТЬ КОД</string>
    <string name="action_call">Позвонить</string>
    <string name="action_show_map">Показать на карте</string>
    <string name="title_settings_phone">Номер телефона</string>
    <string name="title_settings_email">Email</string>
    <string name="action_settings_save">Сохранить</string>
    <string name="action_settings_logout">Выйти</string>
    <string name="action_settings_successfully_save">Изменения успешно сохранены</string>
    <string name="title_logout_logout">Выйти из профиля?</string>
    <string name="action_logout_logout">Выйти</string>
    <string name="action_logout_cancel">Отмена</string>
    <string name="msg_orders_empty">Нет заказов</string>
    <string name="code_letters">АБВГДЕЗИКЛМНПРСТУФЦЧШЭЮЯ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>