<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bunbeauty.papakarlo.view_model.CreationAddressViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/DefaultPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragment_creation_address_mcv_address"
            style="@style/MaterialCardCreationAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.creation_address.CreationAddressFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:id="@+id/fragment_creation_address_tv_title"
                    style="@style/TitleCreationAddress"
                    android:text="@string/title_creation_address_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_creation_address_til_street"
                    style="@style/MaterialInputLayout"
                    android:hint="@string/hint_creation_address_street"
                    app:counterEnabled="true"
                    app:counterMaxLength="50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_creation_address_tv_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_creation_address_et_street"
                        style="@style/MaterialInput"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_creation_address_til_house"
                    style="@style/MaterialInputLayout"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:hint="@string/hint_creation_address_house"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_creation_address_til_flat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_creation_address_til_street">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_creation_address_et_house"
                        style="@style/MaterialInput"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_creation_address_til_flat"
                    style="@style/MaterialInputLayout"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:hint="@string/hint_creation_address_flat"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fragment_creation_address_til_house"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_creation_address_til_street">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_creation_address_et_flat"
                        style="@style/MaterialInput"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_creation_address_til_entrance"
                    style="@style/MaterialInputLayout"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:hint="@string/hint_creation_address_entrance"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_creation_address_til_intercom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_creation_address_til_house">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_creation_address_et_entrance"
                        style="@style/MaterialInput"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_creation_address_til_intercom"
                    style="@style/MaterialInputLayout"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:hint="@string/hint_creation_address_intercom"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:layout_constraintEnd_toStartOf="@+id/fragment_creation_address_til_floor"
                    app:layout_constraintStart_toEndOf="@+id/fragment_creation_address_til_entrance"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_creation_address_til_flat">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_creation_address_et_intercom"
                        style="@style/MaterialInput"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_creation_address_til_floor"
                    style="@style/MaterialInputLayout"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:hint="@string/hint_creation_address_floor"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fragment_creation_address_til_intercom"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_creation_address_til_flat">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_creation_address_et_floor"
                        style="@style/MaterialInput"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_creation_address_btn_creation_address"
            style="@style/MainButton"
            android:onClick="@{()->viewModel.creationAddressClick()}"
            android:text="@string/action_creation_address_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
